# wiferion_charger-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
debian/: changelog  control  copyright  gbp.conf  rules
src/: driver.cpp
wiferion_charger/: CHANGELOG.rst  package.xml
wiferion_charger/include/wiferion_charger/: driver.hpp  node.hpp
wiferion_charger/launch/: wiferion.launch.py
wiferion_charger/src/: node.cpp
wiferion_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
wiferion_interfaces/msg/: MobileState.msg
